Arreglando vista en ruta /products

--- a/desafios/7/views/viewMain.pug
+++ b/desafios/7/views/viewMain.pug
@@ -1,6 +1,6 @@
 extends layouts/main
 
-block viewForm  
+block viewMain  
     include partials/form.pug
     include partials/productsListSocket.pug
     include partials/chat.pug
