--- a/desafio/views/partials/productsRandom.pug
+++ b/desafio/views/partials/productsRandom.pug
@@ -10,10 +10,10 @@ div
                     th Imagen
                 each product in DB_RANDOMPRODUCTS
                     tr
-                        td=product.title
-                        td=product.price
+                        td=product.nombre
+                        td=product.precio
                         td
-                            img(width="30" src=product.url, alt="")
+                            img(width="30" src=product.foto, alt="")
     else
         h3(class="alert alert-warning text-center") No se encontraron productos
 div
