--- a/desafio/views/layouts/logout.pug
+++ b/desafio/views/layouts/logout.pug
@@ -7,9 +7,8 @@ html(lang="en")
         title Form Pug
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous")
-        script(src="/socket.io/socket.io.js")
         script(src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js")
-        script(src="/js/main.js")
+        script(src="/js/logout.js")
     body 
         div(class="container mt-3") 
-            block viewChat
+            block viewLogout
