--- a/desafio/views/partials/chat.pug
+++ b/desafio/views/partials/chat.pug
@@ -1,4 +1,8 @@
 div.mt-5.mb-5
+    h2 Bienvenid@ #{nombre.nombre}!
+    form#formLogout(method="POST" action="/logout")
+        div(class="row justify-content-end ")
+            button.btn.btn-success.mt-3(type="submit") Logout 
     div 
         h1#compresion 
     h3 Chat Websocket!
