--- a/desafio/views/partials/logIn.pug
+++ b/desafio/views/partials/logIn.pug
@@ -2,7 +2,12 @@ div.mt-5.mb-5
     h3 Login
     form#formLogin(method="POST" action="/login")
         div.form-group
-            label(for="text") Nombre
-            input.form-control(type="text" name="nombre" aria-describedby="userComent" class="w-50" required)
+            label(for="text") Email
+            input#username.form-control(type="email" name="username" aria-describedby="userComent" class="w-50" required)
+            label(for="text") Contraseña
+            input#password.form-control(type="password" name="password" aria-describedby="userComent" class="w-50" required)
         div.form-group
-            button.btn.btn-success.mt-3(type="submit") Enviar 
+            button.btn.btn-success.mt-3(type="submit") Enviar
+    form(method="GET" action="/registro")
+        div.form-group 
+            button.btn.btn-success.mt-3(type="submit") Ir a Registro 
