--- a/desafio/views/partials/info.pug
+++ b/desafio/views/partials/info.pug
@@ -7,3 +7,4 @@ div
     p Path de ejecución: #{process.execPath}
     p Process id: #{process.pid}
     p Carperta del proyecto: #{process.cwd()} 
+    p Procesadores presentes en el servidos: #{CPU_CORES}
