--- a/desafio/views/layouts/main.pug
+++ b/desafio/views/layouts/main.pug
@@ -10,6 +10,7 @@ html(lang="en")
         script(src="/socket.io/socket.io.js")
         script(src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js")
         script(src="/js/main.js")
+        link(rel="shortcut icon" href="#")
     body 
         div(class="container mt-3") 
             block viewChat
