--- a/desafio/views/layouts/logout.pug
+++ b/desafio/views/layouts/logout.pug
@@ -9,6 +9,7 @@ html(lang="en")
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js")
         script(src="/js/logout.js")
+        link(rel="shortcut icon" href="#")
     body 
         div(class="container mt-3") 
             block viewLogout
