--- a/desafio/views/layouts/main.pug
+++ b/desafio/views/layouts/main.pug
@@ -12,5 +12,5 @@ html(lang="en")
         script(src="/js/main.js")
         link(rel="shortcut icon" href="#")
     body 
-        div(class="container mt-3") 
-            block viewChat
+        div(class="container mt-3")
+            block viewMain
